# sistema_academico

./: Aluno.cpp  Aluno.h  CMakeLists.txt  Departamento.cpp  Departamento.h  Disciplina.cpp  Disciplina.h  ElAluno.cpp  ElAluno.h  ElDepartamento.cpp  ElDepartamento.h  ElDisciplina.cpp  ElDisciplina.h  Elemento.h  Lista.h  ListaAluno.cpp  ListaAluno.h  ListaDepartamento.cpp  ListaDepartamento.h  ListaDisciplina.cpp  ListaDisciplina.h  Pessoa.cpp  Pessoa.h  Principal.cpp  Principal.h  Professor.cpp  Professor.h  Universidade.cpp  Universidade.h  main.cpp  sitema_academico.mdj
